update get application list